--- a/components/assets/pages/legal.html
+++ b/components/assets/pages/legal.html
@@ -19,20 +19,21 @@
                 <h2>Baixali <i>Icon</i></h2>
             </div>
             <div class="button-group">
-                    <a href="../../../index.html"><button class="button-from-header">Home</button></a>
-                    <a href="./categories.html"><button class="button-from-header">Categories</button></a>
-                    <a href="./search.html"><button class="button-from-header">Search</button></a>
-                    <a><button class="button-from-header">Legal Info</button></a>
+                <a href="../../../index.html"><button class="button-from-header">Home</button></a>
+                <a href="./categories.html"><button class="button-from-header">Categories</button></a>
+                <a href="./search.html"><button class="button-from-header">Search</button></a>
+                <a><button class="button-from-header">Legal Info</button></a>
             </div>
         </div>
     </header>
 
     <div class="container">
-            <div class="card">
-                <h2>Legal information:</h2>
-                <p>This website was created with the intention of being a prototype, it does not represents the final product, make sure to give me a nice 10 Fabio. Thanks ;)</p>
-            </div>
+        <div class="card">
+            <h2>Legal information:</h2>
+            <p>This website was created with the intention of being a prototype, it does not represents the final
+                product, make sure to give me a nice 10 Fabio. Thanks ;)</p>
         </div>
+    </div>
 
 
 
